# sinsei_UMIUSI_control

./: .clang-format  .clang-tidy  .editorconfig  .env  .gitignore  CMakeLists.txt  README.md  codecov.yml  docker-compose.yml  package.xml  pyproject.toml
.devcontainer/: devcontainer.json
.docker/scripts/: install-pigpio.sh
.docker/work/: Dockerfile
.github/: codecov.yml
.github/workflows/: main.yml
config/: controllers.yml
docs/: attitude_controller.md  camera.md  thruster_controller.md
include/sinsei_umiusi_control/: app_controller.hpp  gate_controller.hpp  interface_access_helper.hpp  lib.hpp  thruster_controller.hpp  util.hpp  utility.hpp
include/sinsei_umiusi_control/camera/: gst_camera_node.hpp
include/sinsei_umiusi_control/cmd/: app.hpp  attitude.hpp  headlights.hpp  indicator_led.hpp  led_tape.hpp  main_power.hpp  raspi_camera.hpp  thruster.hpp  usb_camera.hpp
include/sinsei_umiusi_control/cmd/thruster/: esc.hpp  servo.hpp
include/sinsei_umiusi_control/controller/: app_controller.hpp  attitude_controller.hpp  gate_controller.hpp  thruster_controller.hpp
include/sinsei_umiusi_control/controller/attitude_controller/: controller_logic.hpp  data_conversion.hpp
include/sinsei_umiusi_control/controller/logic/: logic_interface.hpp
include/sinsei_umiusi_control/controller/logic/attitude/: data_conversion.hpp  feed_forward.hpp
include/sinsei_umiusi_control/controller/logic/thruster/: direction.hpp  linear_acceleration.hpp
include/sinsei_umiusi_control/hardware/: can.hpp  esc_direct.hpp  headlights.hpp  imu.hpp  indicator_led.hpp  raspi_camera.hpp  servo_direct.hpp  thruster_direct.hpp  usb_camera.hpp
include/sinsei_umiusi_control/hardware/thruster_direct/: esc_direct.hpp  servo_direct.hpp
include/sinsei_umiusi_control/hardware_model/: can_model.hpp  headlights_model.hpp  imu_model.hpp  indicator_led_model.hpp
include/sinsei_umiusi_control/hardware_model/can/: vesc_model.hpp
include/sinsei_umiusi_control/hardware_model/impl/: linux_can.hpp  linux_gpio.hpp  linux_i2c.hpp  mock_gpio.hpp  mock_i2c.hpp  pi_i2c.hpp  pigpio.hpp
include/sinsei_umiusi_control/hardware_model/imu/: bno055_model.hpp
include/sinsei_umiusi_control/hardware_model/interface/: can.hpp  can_interface.hpp  gpio.hpp  gpio_interface.hpp  i2c.hpp
include/sinsei_umiusi_control/hardware_model/thruster_direct/: esc_direct_model.hpp  servo_direct_model.hpp
include/sinsei_umiusi_control/hardware_models/: indicator_led_model.hpp
include/sinsei_umiusi_control/state/: can.hpp  esc.hpp  headlights.hpp  imu.hpp  indicator_led.hpp  main_power.hpp  raspi_camera.hpp  thruster.hpp  usb_camera.hpp
include/sinsei_umiusi_control/state/thruster/: esc.hpp  servo.hpp
include/sinsei_umiusi_control/util/: byte.hpp  can_interface.hpp  constexpr.hpp  enum_cast.hpp  gpio.hpp  gpio_interface.hpp  interface_accessor.hpp  linux_can.hpp  new_type.hpp  params.hpp  pican.hpp  pigpio.hpp  serialization.hpp  string.hpp  thruster_driver_type.hpp  thruster_mode.hpp  vector.hpp
launch/: launch.xml  main.yaml
launch/camera/: usb_camera_launch.py
launch/include/: gen_local_params.py  help.py  ros2_control_common.py  ros2_control_common.xml
launch/util/: gen_local_params.yaml  help.yaml
msg/: Angle.msg  Color.msg  Current.msg  DutyCycle.msg  EscState.msg  ImuState.msg  LowPowerCircuitHealth.msg  MainPowerState.msg  Orientation.msg  Rpm.msg  Temperature.msg  ThrusterState.msg  Velocity.msg  Voltage.msg
params/: cameras.yaml  controllers.yaml  launch_args.yaml
plugin/: umiusi_controller_plugin.xml  umiusi_hardware_plugin.xml
scripts/: camera.py
src/sinsei_umiusi_control/: app_controller.cpp  gate_controller.cpp  thruster_controller.cpp
src/sinsei_umiusi_control/camera/: gst_camera_node.cpp  usb_camera  usb_camera.py
src/sinsei_umiusi_control/controller/: app_controller.cpp  attitude_controller.cpp  gate_controller.cpp  thruster_controller.cpp
src/sinsei_umiusi_control/hardware/: can.cpp  esc_direct.cpp  headlights.cpp  imu.cpp  indicator_led.cpp  raspi_camera.cpp  servo_direct.cpp  thruster_direct.cpp  usb_camera.cpp
src/sinsei_umiusi_control/hardware/thruster_direct/: esc_direct.cpp  servo_direct.cpp
src/sinsei_umiusi_control/hardware_model/: can_model.cpp  headlights_model.cpp  imu_model.cpp  indicator_led_model.cpp
src/sinsei_umiusi_control/hardware_model/can/: vesc_model.cpp
src/sinsei_umiusi_control/hardware_model/impl/: linux_can.cpp  linux_gpio.cpp  linux_i2c.cpp  mock_gpio.cpp  mock_i2c.cpp  pi_i2c.cpp  pigpio.cpp
src/sinsei_umiusi_control/hardware_model/imu/: bno055_model.cpp
src/sinsei_umiusi_control/hardware_model/thruster_direct/: esc_direct_model.cpp  servo_direct_model.cpp
src/sinsei_umiusi_control/hardware_models/: indicator_led_model.cpp
src/sinsei_umiusi_control/util/: interface_accessor.cpp  linux_can.cpp  pican.cpp  pigpio.cpp
test/: helper.py  test_launch.py  test_urdf.py
test/cpp/: hardware_model.cpp  util.cpp
test/cpp/hardware_model/: can.cpp  headlights.cpp  imu.cpp  imu_bno055.cpp  indicator_led.cpp
test/cpp/hardware_model/can/: vesc.cpp
test/cpp/hardware_model/imu/: bno055.cpp
test/cpp/mock/: can.hpp  gpio.hpp  i2c.hpp
test/launch_testing/: test_thruster_mode_can.py  test_thruster_mode_direct.py
test/python/: helper.py  test_launch.py  test_urdf.py
urdf/: main.urdf.xacro  sinsei_umiusi_control.urdf.xacro
urdf/sinsei_umiusi_control/: can.urdf.xacro  headlights.urdf.xacro  imu.urdf.xacro  indicator_led.urdf.xacro  raspi_camera.urdf.xacro  thruster_direct.urdf.xacro  usb_camera.urdf.xacro
